--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,23 +9,23 @@ on:
 jobs:
   pipeline:
     runs-on: ubuntu-latest
-    strategy: 
+    strategy:
       matrix:
-        node-version: [ 17.x ]
+        node-version: [17.x]
 
     steps:
+      - uses: actions/checkout@v2
       - name: Setup node.js ${{ matrix.node-version }}
-      uses: actions/checkout@v2
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
       - name: install modules
-      run: npm install
+        run: npm install
       - name: build production project
-      run: npm run build:prod
+        run: npm run build:prod
       - name: linting typescript
-      run: npm run lint:ts
+        run: npm run lint:ts
       - name: linting styles
-      run: npm run lint:css
+        run: npm run lint:css
       - name: unit testing
-      run: npm run test:unit
+        run: npm run test:unit
